# json-config

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: config.cmake.in
include/: json_config.h
test/: CMakeLists.txt  get-invalid_key.cpp  get-valid_key.cpp  get.h
